修改报表的时间控制

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -127,7 +127,7 @@
                     </span>
                 </a>
             </li>
-            <li ui-sref-active="active" class="nav-tips" has-permission="report.tsReport.show" operation="show">
+            <li ui-sref-active="active" class="nav-tips" has-permission="report.networkoffer.show" operation="show">
                 <a ui-sref="app.report.tsOfferReport" md-ink-ripple>
                     <em class="rd"></em>
                     <span>{{'Network Offers' | translate}}
