--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -36,24 +36,14 @@
             </div>
             <div class="cs-subform-control">
                 <md-select aria-label="select" class="cs-subform-select" ng-model="datetype">
-                    <md-option value="1">Today</md-option>
-                    <md-option value="2">Yesterday</md-option>
-                    <md-option value="3">Last 7 days</md-option>
-                    <md-option value="4">Last 14 days</md-option>
-                    <md-option value="5">This Week</md-option>
-                    <md-option value="6">Last Week</md-option>
-                    <md-option value="7">This Month</md-option>
-                    <md-option value="8">Last Month</md-option>
-                    <md-option value="9">This Year</md-option>
-                    <md-option value="10">Last Year</md-option>
-                    <md-option value="0">Custom</md-option>
+                  <md-option value="{{dt.value}}" ng-repeat="dt in datatypes | filter: datetypeFilter">{{dt.display}}</md-option>
                 </md-select>
             </div>
             <div class="cs-subform-group" ng-show="datetype==0">
                 <label class="cs-subform-label">{{'fromDate' | translate}}：</label>
                 <div class="cs-subform-control">
                     <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="fromDate"
-                            ng-max="toDate" is-open="ctrl.dpOpened.a" datepicker-options="dateOptions"
+                            is-open="ctrl.dpOpened.a" datepicker-options="fromDateOptions"
                             ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.a=true" type="button">
                         {{fromDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
                     </button>
@@ -64,7 +54,7 @@
                 <label class="cs-subform-label">{{'toDate' | translate}}：</label>
                 <div class="cs-subform-control">
                     <button class="cs-button-datepicker" uib-datepicker-popup="yyyy-MM-dd" ng-model="toDate"
-                            ng-min="fromDate" is-open="ctrl.dpOpened.b" datepicker-options="dateOptions"
+                            is-open="ctrl.dpOpened.b" datepicker-options="toDateOptions"
                             ng-required="true" close-text="Close" ng-click="ctrl.dpOpened.b=true" type="button">
                         {{toDate | date: 'yyyy-MM-dd'}}<i class="icon-rl-02"></i>
                     </button>
