--- a/Front/src/tpl/suddenChange.html
+++ b/Front/src/tpl/suddenChange.html
@@ -24,7 +24,7 @@
                   </div>
               </div>
               <div class="table-box">
-                  <md-table-container class="repeater-container">
+                  <md-table-container resizefraud class="repeater-container">
                       <table md-table multiple md-progress="promise">
                         <thead md-head>
                           <tr md-row>
@@ -114,7 +114,7 @@
                   </div>
               </div>
               <div class="table-box">
-                  <md-table-container class="repeater-container">
+                  <md-table-container resizefraud class="repeater-container">
                       <table md-table multiple md-progress="promise">
                         <thead md-head>
                           <tr md-row>
