--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -58,6 +58,7 @@
                     <li><a href="#contact2">Contact</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signin">Sign in</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signup">Sign up</a></li>
+                    <li class="free-trial-btn"><a href="http://panel.newbidder.com/#/access/signin">Try it Free</a></li>
                 </ul>
             </nav>
         </div>
@@ -68,158 +69,56 @@
             <button class="join-btn" type="button">Join us</button>
         </a>
     </div>
-    <a href="#pricing">
-        <div class="scroll-down"></div>
-    </a>
 </header>
 <section id="pricing">
     <div class="container" id="pricing2">
-        <div class="pricing-box">
+        <div class="pricing-box clearfix">
             <h2>Below you'll find our pricing</h2>
-            <ul class="pricing-col">
+            <ul class="pricing-free-box">
                 <li class="pricing-free">
-                    <div class="free-top">
-                        <h4>Free</h4>
-                        <p>200000 included events</p>
+                    <div class="pricing-free-title">
+                        <b class="free-b">free</b>
+                        <h2>Free Plan<small>(Forever)</small></h2>
                     </div>
-                    <div class="pricing-line clearfix">
-                        <ol class="free-list">
-                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
-                            <li><i class="icon-ok"></i>3 month data retention</li>
+                    <div class="pricing-plan">
+                        <ol>
+                            <li><i class="icon-ok"></i>Unlimited events</li>
+                            <li><i class="icon-ok"></i>Skype support 24/7</li>
+                            <li><i class="icon-ok"></i>6 months data retention</li>
                             <li><i class="icon-ok"></i>1 custom tracking domain</li>
+                            <li><i class="icon-ok"></i>Bot filter (only 1)<a href="#" data-toggle="tooltip" title="Free plan can create one rule to filter bot ip
+"><i class="icon-question-sign"></i></a></li>
+                            <li><i class="icon-ok"></i>Sudden change (only 1)<a href="#" data-toggle="tooltip" title="Can create an rule to inform you via email with the sudden change. for example, you will be informed once an websiteid is cost higher than 2 usd but no conversion
+"><i class="icon-question-sign"></i></a></li>
+                            <li><i class="icon-ok"></i>3rd Affiliate network API integrate (only 1)<a href="#" data-toggle="tooltip" title="if you running offer from mobidea, and test multi offer daily. you don’t need to create one by one in newbidder tracking again. we have integrate with 6 affiliate network through api that you can manage your offer in our platform and meanwhile you can  import the offer from our system"><i class="icon-question-sign"></i></a></li>
+                            <li><i class="icon-ok"></i>3rd Traffic Source API integrate (only 1)<a href="#" data-toggle="tooltip" title="We have integrated with 3 traffic source through api, take exoclick for example, we pull the campaign and other parameter data from the exoclick to our system, and you can get the real cost and roi with different parameter.
+"><i class="icon-question-sign"></i></a></li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
                             <button class="free-btn">Select Plan<i class="icon-arrow-right"></i></button>
                         </a>
                     </div>
                 </li>
-                <li>
-                    <h3>STARTER</h3>
-                    <div class="pricing-line clearfix">
-                        <div class="pricing-top">
-                            <div class="p-header2">
-                                <b class="line"></b>
-                                <small class="money-icon">$</small>
-                                <span class="money-size">99</span>
-                                <small class="money-small">/ Mon</small>
-                            </div>
-                            <div class="p-header">
-                                <small class="money-icon">$</small>
-                                <span class="money-size">49</span>
-                                <small class="money-small">/ Mon</small>
-                            </div>
-                            <p>1000000 included events</p>
-                            <p>0.049/1000 overage charge</p>
-                        </div>
-                        <ol class="pricing-list">
-                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
-                            <li><i class="icon-ok"></i>6 month data retention</li>
-                            <li><i class="icon-ok"></i>5 custom tracking domains</li>
-                            <li><i class="icon-ok"></i>1 additional user</li>
-                            <li><i class="icon-ok"></i>10%volume discount</li>
-                        </ol>
-                        <a href="http://panel.newbidder.com/#/access/signup">
-                            <button class="plan-btn">Select Plan<i class="icon-arrow-right"></i></button>
-                        </a>
+                <li class="pricing-custom">
+                    <div class="pricing-custom-title">
+                        <h2>Custom Plan</h2>
                     </div>
-                </li>
-                <li>
-                    <h3>AGENCY</h3>
-                    <div class="pricing-line clearfix">
-                        <div class="pricing-top">
-                            <div class="p-header2">
-                                <b class="line"></b>
-                                <small class="money-icon">$</small>
-                                <span class="money-size">399</span>
-                                <small class="money-small">/ Mon</small>
-                            </div>
-                            <div class="p-header">
-                                <small class="money-icon">$</small>
-                                <span class="money-size">199</span>
-                                <small class="money-small">/ Mon</small>
-                            </div>
-                            <p>10000000 included events</p>
-                            <p>0.02/1000 overage charge</p>
-                        </div>
-                        <ol class="pricing-list">
-                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
+                    <div class="pricing-plan">
+                        <ol>
+                            <li><i class="icon-ok"></i>More additional users</li>
                             <li><i class="icon-ok"></i>1 year data retention</li>
-                            <li><i class="icon-ok"></i>10 custom tracking domains</li>
-                            <li><i class="icon-ok"></i>2 additional users</li>
-                            <li><i class="icon-ok"></i>15% volume discount</li>
+                            <li><i class="icon-ok"></i>More custom domain</li>
+                            <li><i class="icon-ok"></i>Bot filter (more rule)</li>
+                            <li><i class="icon-ok"></i>Sudden change (more rule)</li>
+                            <li><i class="icon-ok"></i>3rd Affiliate network API integrate(more)</li>
+                            <li><i class="icon-ok"></i>3rd Traffic Source API integrate(more)</li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
-                            <button class="plan-btn">Select Plan<i class="icon-arrow-right"></i></button>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <h3>ENTERPRISE</h3>
-                    <div class="pricing-line clearfix">
-                        <div class="pricing-top">
-                            <div class="p-header2">
-                                <b class="line"></b>
-                                <small class="money-icon">$</small>
-                                <span class="money-size">999</span>
-                                <small class="money-small">/ Mon</small>
-                            </div>
-                            <div class="p-header">
-                                <small class="money-icon">$</small>
-                                <span class="money-size">499</span>
-                                <small class="money-small">/ Mon</small>
-                            </div>
-                            <p>30000000 included events</p>
-                            <p>0.017/1000 overage charge</p>
-                        </div>
-                        <ol class="pricing-list">
-                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
-                            <li><i class="icon-ok"></i>2 year data retention</li>
-                            <li><i class="icon-ok"></i>30 custom tracking domains</li>
-                            <li><i class="icon-ok"></i>5 additional users</li>
-                            <li><i class="icon-ok"></i>20% volume discount</li>
-                        </ol>
-                        <a href="http://panel.newbidder.com/#/access/signup">
-                            <button class="plan-btn">Select Plan<i class="icon-arrow-right"></i></button>
+                            <button class="plan-btn">Contact us<i class="icon-arrow-right"></i></button>
                         </a>
                     </div>
                 </li>
             </ul>
-        </div>
-    </div>
-</section>
-<section id="sliderPricing">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div id="pricingCalculator" class="planSlider">
-                    <h4 class="title-01">Monthly cost calculator:</h4>
-                    <div class="row eventsSliderBox">
-                        <div class="col-md-12">
-                            <input id="eventsSlider" class="eventsSlider" type="slider" name="events" value="0" style="display: none;">
-                        </div>
-                        <div class="events-btn">
-                            <input type="text" name="eventsSliderNumber" value="" class="eventsSliderNumber numberField" placeholder="">
-                            <a href="http://panel.newbidder.com/#/access/signin"><button class="sign-btn" type="button">Sign in</button></a>
-                        </div>
-                    </div>
-                </div>
-
-                <section class="row sliderResults">
-                    <div class="col-md-3 col-sm-3 col-xs-12">
-                        Plan <span><span class="dolar">$</span><span class="prepay">0</span> <span class="plan">NOOBIE</span></span>
-                        <span class="caption"><span class="includedEvents">10,000,000</span> events included</span>
-                    </div>
-                    <div class="col-md-1 col-sm-1 separator"><span></span></div>
-                    <div class="col-md-3 col-sm-3 col-xs-12 mainPriceContainer">
-                        Price: <span><span class="dolar">$</span><span class="mainPriceLittle">0</span></span> month
-                    </div>
-                    <div class="col-md-1 col-sm-1 separator"><span></span></div>
-                    <div class="col-md-3 col-sm-3 col-xs-12">
-                        Overages : <span><span class="dolar">$</span><span class="overages">0</span></span>
-                        <span class="caption"><span class="overagesEvents">0</span> extra events</span>
-                    </div>
-                </section>
-            </div>
         </div>
     </div>
 </section>
@@ -527,4 +426,5 @@
 <script>
     $(function () { $("[data-toggle='tooltip']").tooltip(); getLeftDays(); });
 </script>
+
 </html>
