--- a/Front/src/tpl/fraudFilter-edit-dialog.html
+++ b/Front/src/tpl/fraudFilter-edit-dialog.html
@@ -40,7 +40,7 @@
                 <label class="col-sm-3 control-label">Frequency<span class="star-icon">*</span>:</label>
                 <div class="col-sm-3 frequency">
                     <input type="text" name="frequency" class="form-control" ng-model="formData.timeSpan" required>
-                    <span class="msg">seconds（xxxx）</span>
+                    <span class="msg">seconds</span>
                     <span style="color:red" ng-show="editForm.frequency.$dirty && editForm.frequency.$invalid">
                         <span ng-show="editForm.frequency.$error.required">Frequency is required.</span>
                     </span>
