修改弹层标题

--- a/Front/src/tpl/rule-log-dialog.html
+++ b/Front/src/tpl/rule-log-dialog.html
@@ -1,8 +1,10 @@
 <md-dialog class="cs-edit-dialog rule-log" ng-cloak>
-    <md-dialog-content class="md-dialog-content">
-      <div class="rule-log-title">
-        Rule Running Log
+  <md-toolbar>
+      <div class="md-toolbar-tools cam-title">
+          <h2 class="md-title">Rule Running Log</h2>
       </div>
+  </md-toolbar>
+    <md-dialog-content class="md-dialog-content" style="padding-top: 15px;">
       <div class="log-name">
         <span class=rule-name>Rule Name</span>
         <span>{{rule.name}}</span>
