--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -9,6 +9,7 @@
       <div class="changeplan hide">
           <a href="#">Choose Plan<i class="icon-choose fonts28"></i></a>
       </div>
+      <div class="profile-timezone">{{profile.timezoneDeatil}}</div>
       <div class="home">
         <a class="home-link" ui-sref="app.report.campaign"><i class="icon-home fonts17"></i></a>
       </div>
