--- a/Front/src/tpl/suddenChange.html
+++ b/Front/src/tpl/suddenChange.html
@@ -26,7 +26,7 @@
               <div class="table-box">
                   <md-table-container resizefraud class="repeater-container">
                       <table md-table multiple md-progress="promise">
-                        <thead md-head>
+                        <thead md-head fix-head>
                           <tr md-row>
                             <th md-column ng-repeat="th in ths">{{th.name}}</th>
                             <th md-column>Status</th>
