修改编辑时日期显示问题 修改编辑保存后list页面不刷新问题

--- a/Front/src/tpl/suddenChange.html
+++ b/Front/src/tpl/suddenChange.html
@@ -34,7 +34,7 @@
                           </tr>
                         </thead>
                         <tbody md-body>
-                          <tr ms-row ng-repeat="tr in list.rules track by tr.id">
+                          <tr ms-row ng-repeat="tr in list.rules">
                             <td md-cell>{{::tr.name}}</td>
                             <td md-cell>{{::tr.dimension}}</td>
                             <td md-cell>{{::tr.timeSpan}}</td>
