select menu& add time for sudden change report

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -138,7 +138,7 @@
                     </span>
                 </a>
             </li>
-            <li>
+            <li ui-sref-active="active">
               <md-menu-bar style="padding: 0;">
                   <md-menu>
                     <button ng-click="$mdMenu.open()" class="type-title">
