--- a/Front/src/tpl/fraudFilter.html
+++ b/Front/src/tpl/fraudFilter.html
@@ -1,8 +1,8 @@
 <div ng-cloak class="sudden-change">
   <md-content>
-    <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn add-rule" ng-click="editRuleItem()" translate>New Add Rule</md-button>
+    <md-button class="md-raised md-primary cs-compact cs-add-button blue-btn add-rule" ng-click="editRuleItem()" translate>New Add Fraud Filter Rule</md-button>
     <md-tabs md-dynamic-height md-border-bottom md-selected="tabSelected">
-      <md-tab label="Rules">
+      <md-tab label="Fraud Filter Rules">
         <md-content class="md-padding">
             <div class="cs-action-bar clearfix">
                 <div class="left-con">
@@ -34,7 +34,7 @@
                         </tr>
                       </thead>
                       <tbody md-body vs-repeat vs-scroll-parent=".repeater-container">
-                        <tr ms-row ng-repeat="rule in rules.rules track by rule.id">
+                        <tr ms-row ng-repeat="rule in rules.rules">
                           <td md-cell>{{::rule.name}}</td>
                           <td md-cell>{{::rule.timeSpan}}</td>
                           <td md-cell>
