--- a/Front/src/tpl/ts-offer-report.html
+++ b/Front/src/tpl/ts-offer-report.html
@@ -76,7 +76,7 @@
     <div class="load-progress-content">
       <i class="icon-smile"></i>
       <h2>Loading...</h2>
-      <p>Thanks for your patients, the data is extracting...</p>
+      <p>Thanks for your patience, the data is extracting...</p>
     </div>
   </div>
 
